[gd_scene load_steps=8 format=3 uid="uid://b5w7d7mdw8bhk"]

[ext_resource type="Script" path="res://health_bar/health_bar.gd" id="1_6rpbh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfphj"]
bg_color = Color(0, 0, 0, 0.0784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxpe6"]
bg_color = Color(0.871036, 0.9631, 0.938873, 1)

[sub_resource type="Theme" id="Theme_1ik2a"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_lfphj")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_jxpe6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_owkeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_we216"]
bg_color = Color(0.159781, 0.698409, 0.537406, 1)

[sub_resource type="Theme" id="Theme_mmalr"]
ProgressBar/styles/background = SubResource("StyleBoxEmpty_owkeu")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_we216")

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_6rpbh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="LastHealth" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 40.0
theme = SubResource("Theme_1ik2a")
step = 1.0
value = 50.0
show_percentage = false

[node name="DamageNodes" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Health" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_mmalr")
step = 1.0
value = 50.0
show_percentage = false

[node name="DamageDecayTimer" type="Timer" parent="Control"]
one_shot = true

[connection signal="timeout" from="Control/DamageDecayTimer" to="." method="_on_damage_decay_timer_timeout"]
